fixed overlap of select box text

--- a/mod-picker/app/assets/stylesheets/pages/showMod.scss
+++ b/mod-picker/app/assets/stylesheets/pages/showMod.scss
@@ -246,6 +246,7 @@
     flex-grow: 1;
     margin-left: 10px;
     margin-right: 10px;
+    min-width: 190px;
   }
 }
 
